[gd_scene load_steps=2 format=3 uid="uid://bvbmgcguk8h5g"]

[ext_resource type="Script" uid="uid://bjha2beiya2hp" path="res://Scripts/main.gd" id="1_jjgbg"]

[node name="main" type="Node2D"]
script = ExtResource("1_jjgbg")

[node name="CurrentScene" type="Node" parent="."]

[node name="CutsceneLayer" type="CanvasLayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(320, 180)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)
